# multioutput-conformal

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
doc/: conformal-prediction.md  data-acquisition.md  docker-overview.md  docker-workflows.md  metrics.md  model-definition.md  web-interface.md
notebooks/: example-data.ipynb  high-level-data.csv  low-level-data.csv  mdc-calibration.ipynb  mdc-dataset-analyzation.ipynb  mdc-high-level-calib-test.ipynb  mdc-high-level-validation.ipynb  mdc-low-level-validation.ipynb
notebooks/example/: example-data.ipynb
notebooks/mdc-dataset/: mdc-high-level-calib-test.ipynb  mdc-high-level-validation.ipynb  mdc-low-level-calib-test.ipynb  mdc-low-level-validation.ipynb
notebooks/sgvehicle-dataset/: calibration.ipynb  cluster-method-comparison.ipynb  dataset-analyzation.ipynb  high-level-calib-test.ipynb  high-level-validation.ipynb  low-level-calib-test.ipynb  low-level-validation.ipynb
notebooks/utkface-dataset/: calibration.ipynb  dataset-analyzation.ipynb  high-level-calib-test.ipynb  high-level-validation.ipynb  (+2 more)
results/: hl_hl_cal-results.csv
scripts/: docker-build.sh  docker-prepare-data.sh  docker-run-calibrate.sh  docker-run-train.sh  docker-run-web.sh  download_utkface.py  download_utkfaces.py  prepare-data.sh  prepare-dataset.py  prepare-sgvehicle-dataset.py  prepare-utkface-dataset.py  prepare-utkfaces-dataset.py
src/: experiment.py  main.py  metrics.py  train.py  web_service.py
static/: config.json  styles.css  train-config.json  ws-config.json
(+46 files in other folders)
