[project]
name = "multi-output conformal predictor"
version = "0.1.0"
description = "A multi-output conformal predictor for classification tasks."

[tool.ruff]
line-length = 100
target-version = "py312"

fix = true
show-fixes = true

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable rule groups
select = [
    "E", "F", "I", "B", "UP", "ANN", "C4", "SIM", "N", "RET"
]

extend-ignore = ["N803", "N806"]